- funftes Kapitel begonnen
git-svn-id: https://svn.lug-jena.de/uni-skripte@829 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -104,7 +104,7 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 %\newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-%\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
+\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 %\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 %\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
@@ -162,6 +162,7 @@
 
 \DeclareMathOperator{\co}{co}  %% konvexe Huelle
 \DeclareMathOperator{\rg}{rg}  %% Rang
+\DeclareMathOperator{\diag}{diag}  %% Diagonalmatrix
 
 \makeindex
 
@@ -1547,7 +1548,7 @@ x_{N}\geq 0\Leftrightarrow A_{B}^{-1} (b-A_{N}x_{N})\geq 0
 erhalten wir das zum linearen Problem äquivalente, reduzierte Problem
 \begin{gather}\label{eq:29}
   \min s_{N}^{T} v + z_{B}\\
-  \text{\unb} v\in\FF_{B}=\set{v\in\R^{n-m}| v\geq 0, A_{B}^{-1}
+  \text{ \unb} v\in\FF_{B}=\set{v\in\R^{n-m}| v\geq 0, A_{B}^{-1}
      A_{N}v \leq A_{B}^{-1}b}
 \end{gather}
 Die Konstante $z_{B}$ wird in der Regel weggelassen.
@@ -2951,7 +2952,7 @@ Wegen \autoref{eq:42} ist das System aus \autoref{eq:44} äquivalent zu:
   Als lineares Problem:
   \begin{align*}
     \min 41x_{1} + 35x_{2} + 96x_{3} &\\
-    \text{\unb}&\\
+    \text{ \unb}&\\
     2x_{1} + 3x_{2} + 7x_{3} &\geq 1250\\
     x_{1}  +  x_{2}          &\geq 250\\
     5x_{1} + 3x_{2}          &\geq 900\\
@@ -3001,14 +3002,14 @@ Allgemeiner kann man ausgehend vom primalen Problem folgendes
 formulieren:
 \begin{gather}
   \min c^{T}x \tag{LP}\\
-  \text{\unb} Ax=b, x\geq 0\nonumber\\
+  \text{ \unb} Ax=b, x\geq 0\nonumber\\
   \FF_{P}=\{x\in\R^{n}\colon Ax=b, x\geq0\}\nonumber\\
   \max b^{T}y \tag{DS}\nonumber\\
-  \text{\unb} \begin{pmatrix}y\\s\end{pmatrix} \in\FF_{D}=
+  \text{ \unb} \begin{pmatrix}y\\s\end{pmatrix} \in\FF_{D}=
      \{y\in\R^{m}, s\in\R^{n}\colon A^{T}y+s=c, s\geq0\}\nonumber\\
   \text{\emph{Äquivalente Formulierung}}\nonumber\\
   \max b^{T}y \tag{DP}\\
-  \text{\unb} y\in\tilde{\FF}_{D}= \{y\in\R^{m}\colon A^{T}y\leq c\}
+  \text{ \unb} y\in\tilde{\FF}_{D}= \{y\in\R^{m}\colon A^{T}y\leq c\}
 \end{gather}
 
 \begin{bsp}
@@ -3142,7 +3143,7 @@ formulieren:
   -\delta e\leq ax-b\leq \delta e$. Dabei ist $e$ der Einheitsvektor.
   Vergleiche:
   \begin{gather*}
-    \min(-b^{T}, b^{T}, 0)y \text{\unb}\\
+    \min(-b^{T}, b^{T}, 0)y \text{ \unb}\\
     \begin{pmatrix}
       A^{T} & -A^{T} & 0_{n}\\
       e^{T} & e^{T} & 1
@@ -3242,13 +3243,13 @@ Für den Anwender ergeben sich also folgende Schritte:
 
 Allgemein betrachten wir die folgende Situation:
 \begin{gather}
-  \min c^{T}x\text{\unb} \tag{(LP)\textsubscript{v}}\\
+  \min c^{T}x\text{ \unb} \tag{(LP)\textsubscript{v}}\\
   x\in\FF(v)=\{x\in\R^{n}\colon x\geq0, Ax=b+v\}\nonumber\\
 \end{gather}
 Frage: Wie hängen Lösung und Optimalwert von $V\in\R^{n}$ ab? Das duale
 Problem lautet:
 \begin{gather}
-  \max (b+t)^{T}y\text{\unb} \tag{(LP)\textsubscript{v}}\\
+  \max (b+t)^{T}y\text{ \unb} \tag{(LP)\textsubscript{v}}\\
   y\in\tilde{\FF}_{D}=\{y\in\R^{n}\colon A^{T}y\leq c\}\nonumber\\
 \end{gather}
 Sei $x$ eine Lösung des linearen Problems für $v=0_{m}$ zur Basis $B$ und
@@ -3296,7 +3297,7 @@ Für $v\in\R^{m}$ definieren wir:
 \end{bem}
 
 \begin{bsp}[Fortsetzung von \autoref{bsp:412}]
-  Die kapazität (Vorrat) $b_{1}$ von $B_{1}$ soll geändert werden. Dazu
+  Die Kapazität (Vorrat) $b_{1}$ von $B_{1}$ soll geändert werden. Dazu
   definieren wir $v_{\epsilon}=\epsilon\begin{pmatrix}1\\0\\0\end{pmatrix}$.
   Somit gilt:
   \begin{gather*}
@@ -3318,6 +3319,244 @@ Für $v\in\R^{m}$ definieren wir:
   $c^{T}\tilde{x}+\tilde{y}^{T}v_{\epsilon}= c^{T}\tilde{x}+\epsilon
   \tilde{y}_{1}= -\nicefrac{695}{7}-\nicefrac{13}{7}\epsilon$.
 \end{bsp}
+
+\chapter{Affine Skalierung}
+
+(einfachstes Innere-Punkte-Verfahren)
+
+\section{Einführung}
+
+Das Simplex-Verfahren wurde gegen Ende der 50er Jahre von George B.
+Dantzig entwickelt. Sei $S(n,m)$ die Anzahl der Iterationen des
+Simplex-Verfahrens. Dann gilt $s(n,m)\leq \binom{n}{m}$. Im
+schlechtesten Fall werden alle Ecken durchlaufen.
+
+\begin{bsp}[Klee-Minty-Würfel]
+  Wir betrachten das lineare Problem $\min \sum_{j=1}^{n} 10^{n-j}
+  x_{j}$ \unb $x_{1}\leq 1, 2\sum_{j=1}^{i-1} 10^{i-j} x_{j} +x_{i}
+  \leq 100^{i-1}$ für alle $i=2,\dotsc,n$. Die zulässige Menge ist
+  dabei ein verzerrter Würfel. Hierbei wächst die Anzahl
+  der Iterationen im schlechtesten Fall exponentiell. Dies wurde 1972
+  von Klee und Minty herausgefunden. Später fand man auch ähnliche
+  Beispiele für Zeilen- und Spaltenauswahlregeln.
+\end{bsp}
+
+\section{Das Konzept des Verfahrens}
+
+Wir betrachten das lineare Problem:
+\begin{gather}
+  \min c^{T}x \text{ \unb}\tag{(LP)}\\
+  x\in\FF_{P}=\{x\in\R^{n}\colon Ax=b, x\geq0\}\nonumber
+\end{gather}
+
+\begin{defin}
+  Ein Vektor $x\in\R^{n}$ heißt \highl[Punkt!innerer
+  zulässiger]{innerer zulässiger Punkt} von (LP), wenn $x\in\FF_{P}$
+  und $x>0$ ist.
+\end{defin}
+
+\begin{bem}
+  Das Innere-Punkt-Verfahren startet mit einem inneren zulässigen
+  Punkt $x^{(0)}$ und berechnet eine Folge $\{x^{(k)}\}_{k\in\N}$
+  innerer zulässiger Punkte. Wir bezeichnen die Menge der inneren
+  zulässigen Punkte mit $\FF_{P}^{0}$. Sei nun $x^{(k)}\in\FF_{P}^{0}$
+  nicht optimal. Dann stellt sich die Frage, wann man ausgehend von
+  $x^{(k)}$ einen besseren Punkt $x^{(k+1)}$ berechnen kann.
+\end{bem}
+
+\begin{defin}
+  Eine Richtung $d\in\R^{n}$ heißt
+  \highl[Richtung!zulässige]{zulässige Richtung} von $x^{(k)}$, wenn
+  ein $\overline{\sigma}>0$ existiert, so dass:
+  \begin{gather}\label{eq:51}
+    x^{(k)}+\sigma d\in\FF_{P} \qquad \forall
+       \sigma\in[0,\overline{\sigma}]
+  \end{gather}
+\end{defin}
+
+\begin{bem}
+  Wenn $x^{(k)}>0$ ist, dann gilt $x^{(k)}+\sigma d>0$, falls
+  $\overline{\sigma}$ hinreichend klein ist.
+
+  Um \autoref{eq:51} sicher zu stellen, muss noch folgendes gelten:
+  \begin{gather}\label{eq:52}
+    A(x^{(k)}+\sigma d)=b= Ax^{(k)}+\sigma Ad\Leftrightarrow Ad=0
+  \end{gather}
+  Somit sind alle Richtungen $d\in\R^{n}$ mit $Ad=0$ zulässige
+  Richtungen.
+\end{bem}
+
+\begin{defin}
+  Eine Richtung $d\in\R^{n}$ heißt
+  \highl[Abstiegsrichtung!zulässige]{zulässige Abstiegsrichtung}, wenn
+  $d$ zulässige Richtung ist und es gilt:
+  \begin{gather*}
+    c^{T}(x^{(k)}+\sigma d)<c^{T} x^{(k)} \qquad \forall \sigma\in[0,
+       \overline{\sigma}]
+  \end{gather*}
+\end{defin}
+
+Um eine zulässige Abstiegsrichtung zu berechnen, betrachten wir das
+Problem:
+\begin{gather}
+  \min c^{T}d \text{ \unb}\tag{(AS)}\\
+  Ad=0, \norm{d}\leq1\nonumber
+\end{gather}
+Die zulässige Menge von (AS) ist nicht leer und kompakt. Damit folgt
+nach dem Satz von Weierstraß, dass (AS) eine Lösung hat.
+
+\begin{lemma}
+  Sei $\overline{x}\in\FF_{P}^{0}$ keine Lösung von (LP). Weiter sei
+  $\overline{d}$ eine Lösung von (AS). Dann ist $\overline{d}$
+  zulässige Abstiegsrichtung in $\overline{x}$.
+  \begin{proof}
+    Sei $A\overline{d}=0\Rightarrow\overline{d}$ ist zulässige
+    Richtung. Nun ist noch zu zeigen, dass $\overline{d}$ eine
+    Abstiegsrichtung ist. Wir nehmen an, $c^{T}\overline{d}\geq0$. Sei
+    $x\in\FF_{P}^{0}$ beliebig und
+    d:=$\frac{x-\overline{x}}{\norm{x-\overline{x}}}$. Dann gilt
+    $\norm{d}=1, Ad=\frac{1}{\norm{x-\overline{x}}}
+    (\underbrace{Ax}_{=b} -\underbrace{A\overline{x}}_{=b})=0$. Dann
+    folgt, dass $d$ zulässige Lösung für (AS) $\Rightarrow c^{T}d\geq
+    c^{T}\overline{d}\Rightarrow
+    c^{T}d=\frac{d}{\norm{x-\overline{x}}}
+    (c^{T}x-c^{T}\overline{x})\geq 0 \Rightarrow c^{T}x\geq
+    c^{T}\overline{x}\Rightarrow\overline{x}$ ist Lösung des (LP).
+    Dies steht aber in Widerspruch zur Voraussetzung.
+  \end{proof}
+\end{lemma}
+
+Im $k$-ten Iterationsschritt wollen wir $\norm{\cdot}_{b}$ als Norm
+wählen.
+
+\begin{defin}
+  Sei $Q\in\R^{n\times n}$ mit $\rg(Q)=n, x\in\R^{n}, \rho\prec 0$.
+  Dann heißt die durch
+  \begin{gather*}
+    E(Q, x, \rho)=\{y\in\R^{n}\colon (y-x)^{T} (Q^{-1})^{T}
+       Q(y-x)\leq\rho^{2}\}
+  \end{gather*}
+  definierte Menge \highl{Ellipsoid} mit MIttelpunkt $x$ und Radius
+  $\rho$.
+\end{defin}
+
+\begin{bem}
+  Ist $Q=I_{n}\Rightarrow E(I_{n},x,\rho)=\{y\in\R^{n}\colon
+  (y-x)^{T}(y-x)\leq\rho^{2}\}= \{y\in\R^{n}\colon
+  \norm{y-x}^{2}\leq\rho^{2}\}\Rightarrow E(I_{n}, x, \rho)$ ist die
+  abgeschlossene Kugel um $x$ mit Radius $\rho$.
+
+  Sei allgemein $Q\in\R^{n\times n}\colon\rg(Q)=n\Rightarrow
+  \rg(Q^{-1})=n$. Die Matrix $(Q^{-1})^{T}Q$ ist symmetrisch und
+  positiv definit. Man kann auf dem $\R^{n}$ eine Norm
+  $\norm{\cdot}_{Q}$ definieren:
+  \begin{gather*}
+    \norm{z}_{Q}\colon= \sqrt{z^{T} (Q^{-1})^{T}Q^{-1}z}= \norm{Q^{-1}z}
+  \end{gather*}
+  Mit dieser Norm ist $E(Q,x,\rho)=\{y\in\R^{n}\colon
+  \norm{y-x}_{Q}\leq \rho\}$, d.\,h. ein Ellipsoid ist eine
+  abgeschlossene Kugel bezüglich der durch $Q$ definierten Norm.
+
+  Sei $x^{(k)}\in\FF_{P}^{0}\Rightarrow x^{(k)}\prec0$. Damit folgt,
+  dass die Matrix mit den Diagonalelementen $x^{(k)}$ invertierbar ist
+  ($X_{k}=\diag(x^{(k)})$) und
+  $X_{k}^{-1} = \diag(\nicefrac{1}{x^{(k)}_{1}}, \dotsc,
+  \nicefrac{1}{x^{(k)}_{n}})$.
+
+  Das Verfahren der affinen Skalierung benutzt im $k$-ten
+  Iterationsschritt beim Problem (AS) die Norm $\norm{\cdot}_{X_{k}}$,
+  d.\,h. zur Berechnung einer zulässigen Abstiegsrichtung lösen wir
+  das Problem:
+  \begin{gather}
+    \min_{d\in\R^{n}} c^{T}d \text{ \unb}\tag{(AS)\textsubscript{k}}\\
+    Ad=0, \norm{d}_{X_{k}}<1\nonumber
+  \end{gather}
+  Um (AS)\textsubscript{k} einfach lösen zu können, führen wir eine
+  "`affine Skalierung"' der Variablen durch:
+  \begin{gather*}
+    u=X^{-1}_{k} d\Leftrightarrow d=X_{k}u
+  \end{gather*}
+  Dann gilt:
+  \begin{align}\label{eq:53}
+    \norm{d}^{2}_{X_{k}} &=\norm{X_{k}u}^{2}_{X_{k}}= (X_{k}u)^{T}
+       X^{-1}_{k} X^{-1}_{k} X_{k}u\\
+    &= u^{T}u=\norm{u}^{2}\nonumber\\
+    \Rightarrow \norm{d}_{X_{k}} &= \norm{u}\nonumber
+  \end{align}
+  Damit erhalten wir aus (AS)\textsubscript{k} das Problem:
+  \begin{gather}
+    \min_{u\in\R^{n}} (X_{k}c)^{T} u \text{
+       \unb}\tag{(AS\textsubscript{u})\textsubscript{k}}\\
+    AX_{k}u=0, \norm{u}\leq1\nonumber
+  \end{gather}
+\end{bem}
+
+\begin{bsp}[Frannie]
+  $x^{(k)}=(3,6, 0,2, 1)^{T}$
+\end{bsp}
+
+\section{Berechnung der Suchrichtung}
+
+\begin{satz}
+  Sei $x^{(k)}\in\FF_{P}^{0}$ und $\rg(A)=m<n$. Wir definieren:
+  \begin{gather}\label{eq:54}
+    y^{(k)}\colon=(AX_{k}^{2} A^{T})^{-1} AX_{k}^{2}c\qquad
+       s^{(k)}\colon= x_{k} (c-A^{T}y^{(k)})
+  \end{gather}
+  Wenn $s^{(k)}=0_{n}$ ist, dann ist $x^{(k)}$ Lösung von (LP).
+  Andernfalls ist:
+  \begin{gather}\label{eq:55}
+    u^{(k)}\colon=-\frac{s^{(k)}}{\norm{s^{(k)}}}
+  \end{gather}
+  eindeutig bestimmte Lösung von (AS\textsubscript{u})\textsubscript{k}.
+  \begin{proof}
+    Die Matrix $\underbrace{AX_{k}^{2} A^{T}}_{=AX_{k}(AX_{k})^{T}}\in
+    \R^{n\times m}$ ist invertierbar und $A$ ist positiv definit.
+    Somit ist die Formel für $y^{(k)}$ sinnvoll. Weiterhin ist
+    $AX_{k}(AX_{k})^{T}$ positiv definit. Denn $y^{T}
+    (AX_{k})(AX_{k})^{T} y= (y^{T}AX_{k})(y^{T}AX_{k})^{T} =
+    \norm{(AX_{k})^{T}}^{2}>0$.
+
+    Sei $s^{(k)}=0_{n}$. Dann gilt nach Definition $A^{T}y^{(k)}=c$.
+    Wegen $x^{(k)}\in\FF_{P}^{0}$ folgt, $Ax^{(k)}=b, x^{(k)}\geq0
+    \Rightarrow Ay^{(k)}+s^{(k)}=c$ mit $s^{(k)}\geq 0$. Somit folgt,
+    dass $(x,y,s)=(x^{(k)}, y^{(k)}, s^{(k)})$ eine Lösung des Systems
+    \autoref{eq:41} ist und nach dem Satz von Kuhn-Tucker ist
+    $x^{(k)}$ eine Lösung von (LP).
+
+    \todo{Beweis zu Ende bringen}
+  \end{proof}
+\end{satz}
+
+Die Lösungsformel fpr $y^{(k)}$ ist eine theoretische Formel. Zur
+praktischen Berechnung von $y^{(k)}$ löst man das lineare
+Gleichungssystem
+\begin{gather}\label{eq:56}
+  \underbrace{AX_{k}^{2} A^{T}y}_{=(AX_{k})(AX_{k})^{T}} = AX_{k}^{2}c
+\end{gather}
+Dies kann entweder durch das Choleskyverfahren geschehen. Eine weitere
+Lösungsmöglichkeit erhält man durch folgende Betrachtungen. Die Form
+$(AX_{k})(AX_{k})^{T}y=AX_{k}^{2}c$ des Systems \autoref{eq:56}
+definiert die Normalengleichung für das überbestimmte Gleichungssystem
+$(AX_{k})^{T} y=X_{k}c$. Definiere als Lösung einen Vektor
+$\tilde{y}$, der die Zielfunktion $\norm{(AX_{k})^{T}y-X_{k}c}$
+minimiert.
+
+\begin{satz}
+  Sei $x^{(k)}\in\FF_{P}^{0}$ und es gelte $\rg(A)=m<n$. Weiterhin
+  seien $y^{(k)}, s^{(k)}$ durch \autoref{eq:54} definiert. Ist
+  $s^{(k)}=0$, dann ist $x^{(k)}$ Lösung von (LP). Andernfalls ist
+  \begin{gather}\label{eq:58}
+    d^{(k)}=-\frac{X_{k}s^{(k)}}{\norm{s^{(k)}}}
+  \end{gather}
+  die eindeutige Lösung von (AS)\textsubscript{k}.
+  \begin{proof}
+    Für $s^{(k)}=0$ siehe oben. Sei nun $s^{(k)}\neq 0$. Dann ist $d$
+    genau dann Lösung von (AS)\textsubscript{k}, wenn $u=X^{-1}_{k}d$
+    Lösung von (AS\textsubscript{u})\textsubscript{k} ist, d.\,h.
+    $d^{(k)}=X_{k}u^{(k)}$.
+  \end{proof}
+\end{satz}
 
 
 
