- weiterer Teil der Vorlesung
git-svn-id: https://svn.lug-jena.de/uni-skripte@844 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -3648,6 +3648,81 @@ b^{T}\tilde{y}-\epsilon$.
 Unser Ziel ist nun, dass Verfahren der affinen Skalierung abzubrechen,
 wenn $x^{(k)}$ ein $\epsilon$-Minimum von (LP) ist.
 
+\begin{lemma}
+  Es gelte $\rg(A)=m, \epsilon\geq0, x^{(k)}\in\FF_{P}^{0}$. Weiter seien
+  $y^{(k)}, s^{(k)}$ durch \autoref{eq:54} bestimmt. Gilt mit
+  $e=(1,\dotsc,1)^{T}$:
+  \begin{gather}
+    \label{eq:59}s^{(k)}=0 \qquad e^{T}s^{k}\leq\epsilon
+  \end{gather}
+  dann ist $x^{(k)}$ ein $\epsilon$-Minimum von (LP) und $y^{(k)}$ ein
+  $\epsilon$-Maximum von (DP).
+  \begin{proof}
+    Sei $s\colon= X^{-1}_{k}s^{(k)}$. Dann ist:
+    \begin{enumerate}
+      \item $s\geq0, s=c-A^{T}y^{(k)}\Rightarrow A^{T}y^{(k)} +s= c, s\geq0
+      \Rightarrow y^{(k)} \in\FF_{D}$. Nach Voraussetzung ist $x^{(k)}\in
+      \FF_{P}$, d.\,h. $\FF_{P}\neq \emptyset\neq \FF_{D}$. Nach dem starken
+      Dualitätssatz folgt, dass es eine Lösung von $\tilde{x}$ von (LP) und
+      eine Lösung $\tilde{y}$ von (DP) gibt und außerdem gilt $c^{T}\tilde{x}
+      = b^{T}\tilde{y}$. Wegen \autoref{eq:59} gilt weiter:
+      \begin{align*}
+	0 &\leq (x^{(k)})^{T}s=e^{T}x_{k}s= e^{T}s^{(k)}\leq\epsilon\\
+	\Rightarrow 0 &\leq (x^{(k)})^{T} s= (x^{k})^{T}(c-A^{T}y^{(k)})\\
+	&= c^{T}x^{(k)}- (x^{(k)})^{T} A^{T} y^{(k)}\\
+	&= c^{T}x^{(k)}- (Ax^{(k)})y^{(k)}\\
+	&= c^{T}x^{(k)}- b^{T}y^{(k)}\leq\epsilon
+      \end{align*}
+      und es folgt im Punkt:
+     \item $c^{T}\tilde{x}\leq c^{T}x^{(k)}\leq b^{T}y^{(k)}+\epsilon$\\
+      Nach dem schwachen Dualitätssatz ist $b^{T}y^{(k)}\leq c^{T}\tilde{x}
+      \Rightarrow c^{T}x^{(k)}+\epsilon$, d.\,h. $x^{(k)}$ ist
+      $\epsilon$-Minimum von (LP). Wegen $c^{T}\tilde{x}=b^{T}\tilde{y}$ folgt
+      weiter $b^{T}\tilde{y}-\epsilon=c^{T}\tilde{x} -\epsilon\leq
+      b^{T}y^{(k)}$, d.\,h. $y^{(k)}$ ist $\epsilon$-Maximum von (DP).
+    \end{enumerate}
+  \end{proof}
+\end{lemma}
+
+Für das verfahren der affinen Skalierung gibt man ein Genauigkeitsschranke
+$\epsilon>0$ vor. Dann gibt es zwei Abbruchkriterien:
+\begin{enumerate}
+  \item Die Bedingung in \autoref{eq:59} ist erfüllt. Dann ist $x^{(k)}$ ein
+  $\epsilon$-Minimum von (LP).
+ \item Es gilt $d^{(k)}\geq0$. dann ist die Zielfunktion auf $\FF_{P}$ nicht
+  nach unten beschränkt.
+\end{enumerate}
+
+\section{Das Verfahren}
+\begin{verf}[Affine Skalierung]
+  Gegeben sei ein Startpunkt $x^{0}\in\FF_{P}^{0}, 0<\beta<1$ und
+  $\epsilon>0$. Setze $k\colon=0$.
+  \begin{enumerate}
+    \item Setze $x_{k}=\diag(x^{(k)})$ und berechne
+    \begin{gather*}
+      y^{(k)}= (Ax_{k}^{2}A^{T})^{-1}Ax_{k}^{2}c\qquad s^{(k)}=
+	 x_{k}(c-A^{T}y^{(k)})
+    \end{gather*}
+    durch Lösung des linearen Ausgleichsproblems:
+    \begin{gather*}
+      \min_{y\in\R^{m}} \norm{Ax_{k}^{T}y-x_{k}c}^{2}
+    \end{gather*}
+   \item Falls $s^{(k)}\geq0$ und $e^{T}s^{(k)}\leq\epsilon$ stoppt das
+    Verfahren, da $x^{(k)}$ ein $\epsilon$-Minimum von (LP) ist.
+   \item Fall $s^{(k)}\leq0$ stoppt das Verfahren, da die Zielfunktion auf
+    $\FF_{P}$ nicht nach unten beschränkt ist.
+   \item Berechne die Suchrichtung $d^{(k)}=-\frac{x^{(k)}_{k}}{\norm{s^{k}}}$
+    und bei der Short-Step-Variante $x^{(k+1)}\colon= x^{(k)}+\beta d^{(k)}$
+    sowie bei der Long-Step-Variante $x^{(k+1)}\colon= x^{(k)}+\beta\sigma_{k}
+    d^{(k)}$ mit $\sigma_{k} =\min \{-\frac{x_{i}^{(k)}}{d^{(k)}}\colon 1\in
+    \{1,\dotsc,n\}, d^{(k)}<0\}$.
+   \item Setze $k\colon= k+1$ und gehe zu Punkt 1. Zusätzliches
+    Abbruchkriterium: $\norm{x^{(k+1)}-x^{(k)}}=\beta\sigma_{k}
+    d^{(k)}\leq\sigma$.
+  \end{enumerate}
+\end{verf}
+
+
 
 %% Anhang
 \appendix
