- Spatium fuer Prof.Dr.
git-svn-id: https://svn.lug-jena.de/uni-skripte@859 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -185,7 +185,7 @@
 \begin{document}
 
 \title{Lie-Algebren}
-\author{Prof. Dr. Burkhard Külshammer}
+\author{Prof.\,Dr.\,Burkhard Külshammer}
 \date{Semester: SS 2007}
 \maketitle
 
