--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -79,7 +79,7 @@
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
+%\newtheorem{fakt}{Fakt}
 
 \theoremheaderfont{\scshape}
 \theorembodyfont{\normalfont}
@@ -104,8 +104,8 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
-\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
+%\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
+%\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 \newcommand*{\T}{\mathbb{T}}      % Torus
 \newcommand*{\1}{\mathnormal{1}}
@@ -132,18 +132,18 @@
 \newcommand*{\indexsection}{\minisec}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
+%\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
 % Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
 % im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
 % Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
+% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw\mspace{8mu}}%
+% 			       {$gdw$\xspace}}
+% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
+% 			       {$gdw_{def}$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
@@ -160,11 +160,11 @@
 % Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
 % nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
 % description mit normaler Schrift
-\newenvironment*{mdescription}%
-                {\renewcommand*{\descriptionlabel}[1]%
- 			       {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		{\end{description}}
+% \newenvironment*{mdescription}%
+%                 {\renewcommand*{\descriptionlabel}[1]%
+%  			       {\hspace\labelsep\normalfont ##1}%
+% 		 \begin{description}}%
+% 		{\end{description}}
 
 \makeindex
 
@@ -174,7 +174,7 @@
 \begin{document}
 
 \title{Fourieranalysis}
-\author{PD Dr. Aicke Hinrichs}
+\author{PD\,Dr.\,Aicke Hinrichs}
 \date{Semester: SS 2007}
 \maketitle
 
@@ -393,7 +393,7 @@ Wir studieren eine Gruppe $G$. Dies ist eine lokalkompakte abelsche Gruppe.
 Dabei heißt \highl{Lokalkompaktheit}, dass wir auf $G$ eine Topologie haben
 und jedes Element hat eine kompakte Umgebung.
 Diese Topologie verträgt sich mit der Gruppenoperation. Wichtig ist: Sei
-$O\subseteq G$ offen, dann ist $xO=\{xy: y\in O\}$ wieder offen. Wegen der
+$O\subseteq G$ offen, dann ist $xO=\{xy\colon y\in O\}$ wieder offen. Wegen der
 Eigenschaft muss man zur Prüfung auf Lokalkompaktheit nur das Einselement
 kontrollieren.
 
@@ -752,8 +752,6 @@ Die Fourierkoeffizienten sind $\hat{f}(j)=\langle f,e_{j}\rangle$.
  \item Betrachte $f(x)=x$ auf $[0,2\pi]$ (Koeffizienten ausrechnen) und
   berechne die Parseval-Gleichung.
 \end{enumerate}
-
-
 
 
 
