--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -361,7 +361,7 @@ Im $\R^{n}$ gibt es Gruppen, die natürlich darauf operieren.
 Interessant sind Funktionen, die sich bezüglich dieser Operationen gut
 verhalten.
 
-Für Fourreihen muss man sich ein anderes Objekt besorgen, den \highl{Torus}
+Für Fourierreihen muss man sich ein anderes Objekt besorgen, den \highl{Torus}
 $\T=\R/_{2\pi\Z}$. Als einfaches Modell kann man das Intervall $[0,2\pi)]$
 nehmen. Addition und Subtraktion machen wir modulo $2\pi$. Funktionen auf dem
 Torus entsprechen $2\pi$-periodischen Funktionen auf $\R$.
@@ -446,7 +446,7 @@ e^{ijx}$.
 
 \paragraph{Berechnung der Fourierkoeffizienten}
 Entwickle in Fourierreihe $f(x)=\sum_{j\in\Z} c_{j}e^{ijx}$. Dabei sind die
-$c_{j}$ die Fourierkoeffizienten. Die Frage ist, wann die Fourreihe
+$c_{j}$ die Fourierkoeffizienten. Die Frage ist, wann die Fourierreihe
 konvergiert.
 
 Sei $f$ ein trigonmetrisches Polynom, d.\,h. wir haben eine endliche Summe:
@@ -462,7 +462,7 @@ Daher definieren wir:
   \frac{1}{2\pi} \int_{0}^{2\pi} f(x)e^{-ikx}\,dx\]
 \end{defini}
 
-Die fundamentale Frage der Fourreihen ist die, für welche $f$ und in welchem
+Die fundamentale Frage der Fourierreihen ist die, für welche $f$ und in welchem
 Sinn konvergiert die Reihe $\sum_{j\in\Z} \hat{f}(j)e^{ijx}$ gegen $f$.
 
 $L_{p}$-Räume $L_{p}[0,2\pi)$
@@ -547,11 +547,298 @@ Es ist $f\in L_{1}(\T)\leadsto (\hat{f}(k))$.
   Es gibt auch "`Umkehrungen"' des obigen Satzes.
 \end{bemerk}
 
+\section{Summierbarkeit von Fourierreihen}
 
-\todo{Vorlesung vom 2007-04-25}
+Sei $f\in L_{1}(\T), c_{j}=\hat{f}(j)= \nicefrac{1}{2\pi} \int_{0}^{2\pi} f(x)
+e^{-ijx}\,dx$. Dann ist $\sum_{j=-\infty}^{\infty} \hat{f}(j) e^{ijx}$ die
+formale Fourierreihe. Die Partialsummen haben die Darstellung:
+\begin{gather*}
+  S_{N}f(x)= \sum_{j=-\infty}^{\infty} \hat{f}(j) e^{ijx}
+\end{gather*}
+Die Fourierreihe konvergiert gegen $f$ im Punkt $x$, falls
+\begin{gather*}
+  S_{N}f(x)\rightarrow f(x)\qquad N\rightarrow\infty
+\end{gather*}
+Zum Studium der Konvergenz  ist es günstig, eine \highl{Integraldarstellung}
+für $S_{N}f(x)$ zu finden:
+\begin{align*}
+  S_{N}f(x) &= \sum_{j=-\infty}^{\infty} \hat{f}(j)e^{ijx}
+     = \sum_{j=-\infty}^{\infty} \frac{1}{2\pi} \int_{0}^{2\pi} f(y)
+     e^{-ijx}\,dy e^{ijx}\\
+  &= \frac{1}{2\pi} \int_{0}^{2\pi} \left\{ \sum_{j=-N}^{N}
+     e^{ij(x-y)}\right\} f(y)\,dy
+     = \frac{1}{2\pi} \int_{0}^{2\pi} D_{N}(x-y) f(y)\,dy
+\end{align*}
 
-\todo{Vorlesung vom 2007-04-27}
+Dabei ist $D_{N}(x)=\sum_{j=-N}^{N} e^{ijx}$ der \highl{Dirichletkern} und es
+folgt weiter:
+\begin{align*}
+  D_{N}(x) &= \sum_{j=-N}^{N} e^{ijx} = e^{-iNx}\sum_{j=0}^{2N} e^{ijx}\\
+  &= e^{-iNx} \frac{e^{i(2N+1)x}-1}{e^{ix}-1}
+     = \frac{e^{i(N+1)x}- e^{-iNx}}{e^{ix}-1}\\
+  &= \frac{e^{i(N+\nicefrac{1}{2})x}-
+     e^{-i(N+\nicefrac{1}{2})x}}{e^{i\nicefrac{1}{2}}-e^{-i\nicefrac{1}{2}} }
+     = \frac{\sin (N+\nicefrac{1}{2})x}{\sin \nicefrac{x}{2}}
+\end{align*}
 
+\begin{satz}
+  Die Partialsummen der Fourierreihen lassen sich darstellen als
+  \begin{gather*}
+    S_{N}f(x) = \frac{1}{2\pi} \int_{0}^{2\pi} D_{N} (x-y) f(y)\,dy=
+       \frac{1}{2\pi} \int_{0}^{2\pi} D_{N}(y) f(x-y)\,dy
+       \end{gather*}
+  mit dem Dirichletkern
+  \begin{gather*}
+    D_{N}(x)= \frac{\sin(N+\nicefrac{1}{2})x}{\sin \nicefrac{x}{2}}
+  \end{gather*}
+  Der Dirichletkern ist funddamental für das Studium der Konvergenz von
+  Fourierreihen.
+\end{satz}
+
+\begin{bsp}
+  Sei $f(x)=1$. Dann ist $\hat{f}(j)= \nicefrac{1}{2\pi} \int_{0}^{2\pi}
+  e^{-ijx}\,dx= \begin{cases}1 & j=0\\0 & j\neq0\end{cases}$. Weiter gilt
+  $S_{N}f(x)=1=\nicefrac{1}{2\pi} \int_{0}^{2\pi} D_{N}(x,y)\,dy=
+  \nicefrac{1}{2\pi} \int_{0}^{2\pi} D_{N}(y)\,dy$.
+\end{bsp}
+
+\begin{satz}
+  Sei $f\in L_{1}(\T)$ und $f$ differenzierbar in $x$. Dann gilt
+  \begin{gather*}
+    S_{N}f(x)\rightarrow f(x)
+  \end{gather*}
+  \begin{proof}
+    \begin{align*}
+      \abs{S_{N}f(x)-f(x)} &= \abs{\frac{1}{2\pi} \int_{0}^{2\pi} D_{N}(y)
+	 f(x-y)\,dy-f(x)}\\
+      &= \abs{\frac{1}{2\pi} \int_{0}^{2\pi} D_{N}(y) (f(x-y)-f(x))\,dy}
+    \end{align*}
+    Wir betrachen $x=0$ und integrieren von $-\pi$ bis $\pi$:
+    \begin{align*}
+      \abs{S_{N}f(0)-f(0)} &= \abs{\frac{1}{2\pi} \int_{-\pi}^{\pi} D_{N}(y)
+	 (f(y)-f(0))\,dy}\\
+      &= \abs{\frac{1}{2\pi} \int_{-\pi}^{\epsilon} D_{N}(y) (f(y)-f(0))\,dy}
+	 + \abs{\frac{1}{2\pi} \int_{-\epsilon}^{\epsilon} D_{N}(y)
+	 (f(y)-f(0))\,dy}\\
+	 &\qquad + \abs{\frac{1}{2\pi} \int_{\epsilon}^{\pi} D_{N}(y)
+	 (f(y)-f(0))\,dy}\\
+      \abs{\frac{1}{2\pi} \int_{-\pi}^{\pi} D_{N}(y) (f(y)-f(0))\,dy} &=
+	 \abs{\frac{1}{2\pi} \int_{-\pi}^{\epsilon} \frac{\sin
+	 (N+\nicefrac{1}{2})y}{\sin\nicefrac{y}{2}} (f(y)-f(0))\,dy}\\
+      &= \abs{\frac{1}{2\pi} \int_{-\pi}^{\epsilon} \sin Ny \frac{\cos
+	 \nicefrac{y}{2}}{\sin \nicefrac{y}{2}} (f(y)-f(0))\,dy+
+	 \frac{1}{2\pi} \int_{-\pi}^{\epsilon} \cos Ny (f(y)-f(0))\,dy}\\
+      &\leq I_{a1}+ I_{a2}\\
+      I_{a1} &= \abs{\frac{1}{4\pi i} \int_{-\pi}^{\epsilon} (e^{-iNy}-
+	 e^{-iNy}) \frac{\cos \nicefrac{y}{2}}{\sin \nicefrac{y}{2}}
+	 (f(y)-f(0))\,dy}\\
+      &= \abs{\frac{1}{4\pi} \int_{-\pi}^{\pi} (e^{iNy}-e^{-iNy}) g(y)\,dy}\\
+      &\text{mit } g(y)=\frac{\cos \nicefrac{y}{2}}{\sin \nicefrac{y}{2}}
+	 (f(y)-f(0)) 1_{[-\pi,-\epsilon)}(y)\\
+      &\leq \frac{1}{2} \abs{\frac{1}{2\pi} \int_{-\pi}^{\pi} g(y)e^{iNy}\,dy}
+	 + \frac{1}{2}\abs{\frac{1}{2\pi} \int_{-\pi}^{\pi} g(y)\,dy}\\
+      &= \frac{1}{2} \abs{\hat{g}(N)}+\frac{1}{2} \abs{\hat{g}(-N)}\\
+      &\Rightarrow \hat{g}(N), \hat{g}(-N)\rightarrow 0 \text{ mit }
+	 N\rightarrow\infty\\
+      &\Rightarrow I_{a1}\xrightarrow{N\rightarrow\infty}0 \Rightarrow I_{a},
+	 I_{b} \xrightarrow{N\rightarrow\infty}\\
+      \abs{\frac{1}{2\pi} \int_{-\epsilon}^{\epsilon} D_{N}(y)
+	(f(y)-f(0))\,dy} &= \abs{\frac{1}{2\pi} \int_{-\epsilon}^{\epsilon}
+	 D_{N}(y) (f(y)-f(0))\,dy}\\
+      &\text{$f$ ist differenzierbar in 0}\\
+      &\Rightarrow \abs{f(y)-f(0)}\leq G\abs{y} \text{ für }
+	 \abs{y}\leq\epsilon\\
+    \end{align*}
+    Nun kann man analog zu der anderen Funktion schliessen, dass diese auch
+    gegen 0 geht für $N\rightarrow\infty$. Damit folgt, $\abs{S_{N}f(0)-
+    f(0)}\rightarrow 0$ für $N\rightarrow\infty$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Vergleiche auch mit Taylorreihen.
+\end{bemerk}
+
+\begin{folg}
+  Ist $f$ eine differenzierbare Funktion, so konvergiert die Fourierreihe von $f$
+  gegen $f$ in jedem Punkt.
+\end{folg}
+
+\begin{bemerk}
+  \begin{enumerate}
+    \item Wir haben mehrmals den folgenden Fakt verwendet:
+    Ist $f\colon[a,b]\rightarrow\C$ absolut integrierbar, so gilt
+    $\lim_{y\rightarrow\infty} \int_{a}^{b} f(t)\sin jt\,dt=
+    \lim_{j\rightarrow\infty} \int_{a}^{b} f(t)\cos jt\,dt=0$.
+   \item Analog folgt das \highl{Lokalisationsprinzip} von Riemann: Das
+    Verstehen der Fourierreihe der Funktion $f$ in einem Punkt $x$ hängt
+    ausschließlich von den Werten von $f$ in einem beliebig kleinen Intervall
+    um $x$ ab.
+   \item Ebenso beweist man das etwas allgemeinere \highl{Kriterium von Dini}:
+    Sei $f$ eine Funktion, die in $x_{0}$ sowohl einen links- wie auch
+    rechtsseitigen Grenzwert hat:
+    \begin{align*}
+      f(x_{0}+0)=\lim_{h\downarrow 0} f(x_{0}+h) \text{ existiert}\\
+      f(x_{0}-9)=\lim_{h\downarrow 0} f(x_{0}-h)  \text{ existiert}
+    \end{align*}
+    Setze $S_{0}=\nicefrac{1}{2} (f(x_{0}+0)+f(x_{0}-0))$ und $\phi(h)=
+    f(x_{0}+h)+f(x_{0}-h)+2S_{0}$. Falls für ein $h>0$ das Integral
+    \begin{gather*}
+      \int_{0}^{h} \frac{\abs{\phi(t)}}{t}\,dt
+    \end{gather*}
+    existiert, so konvergiert die Fourierreihe von $f$ im Punkt $x_{0}$ gegen
+    $f$.
+  \end{enumerate}
+\end{bemerk}
+
+\section{Summationsmethoden für Fourierreihen}
+
+Es gibt die drei Summationsverfahren:
+\begin{enumerate}
+  \item Partialsummen: $S_{N}=\sum_{k=1}^{n}\xi_{k}$
+ \item Cesaro-Mittel: $S=\lim \frac{1}{n} \sum_{k=1}^{n} S_{k}$
+  (arithmetisches Mittel der Partialsummen)
+ \item Abel-Summation: $S=\lim_{r\uparrow 1} \sum_{k=1}^{\infty} \xi_{k} r^{k}$
+\end{enumerate}
+
+Mittels der Methoden kann man gewissen divergenten Reihen auf sinnvolle Art
+die Summe zuordnen.
+
+Die Methoden aus dem vorigen Kapitel reichen für die "`meisten"' praktisch
+auftretenden Funktionen aus, z.\,B. für stückweise differenzierbare
+Funktionen. Manchmal möchte man aber ganze Räume von Funktionen betrachten.
+
+\begin{satz}[Carleson-Hut]
+  Die Fourierreihe einer Funktion $f\in L_{p}(\T)$ für $1<p<\infty$ konvergiert
+  fast überall gegen $f$.  
+\end{satz}
+
+\begin{bemerk}
+  Das Carleson-Hut-Theorem ist immer noch eines der am schwierigsten zu
+  beweisenden Resultate der Analysis. Der Beweis wird daher hier auch nicht
+  erbracht. 
+\end{bemerk}
+
+\begin{description}
+  \item[gewöhnliche Konvergenz] $S_{N}f(x)= \sum_{-N}^{N} \hat{f}(j) e^{ijx}$
+ \item[Fourier-Multiplikator] $M_{\lambda}\colon f\rightarrow
+  \sum_{-\infty}^{\infty} \lambda_{j} \hat{f}(j) e^{ijx}$
+ \item[Fourier-Multiplikator zu $S_{N}$] $\lambda_{j}=\begin{cases}1 &
+							\abs{j}\leq N\\ 0 &
+							\text{sonst}\end{cases}$
+  Der scharfe Knick bei $-N,N$ schafft  Probleme bei der Konvergenz. Die
+  Summierbarkeitmethoden beheben diesen Effekt.
+\end{description}
+
+\paragraph{Fejer-Summation}
+Diese entspricht der Cesaro-Summationsmethode:
+\begin{align*}
+  \sigma_{N}f(x) &= \frac{1}{N+1} \sum_{j=0}^{N} S_{j} f(x)\\
+  \sigma_{N}f(x) &= \frac{1}{N+1} \sum_{j=0}^{N} \sum_{k=-j}^{j} \hat{f}(k)
+     e^{ikt}\\
+  &= \sum_{k=-N}^{N} \frac{N+1-\abs{k}}{N+1} \hat{f}(k)e^{ikt}
+\end{align*}
+
+Der Fourier-Multiplikator ist:
+\begin{gather*}
+  \lambda_{j} = \begin{cases}\frac{N+1-\abs{k}}{N+1} & \abs{j}\leq N\\
+		  0 & \text{sonst}\end{cases}
+\end{gather*}
+
+Der Fejerkern ist:
+\begin{align*}
+  K_{N}(x) &= \frac{1}{N+1} \sum_{j=0}^{N} D_{j}(x)
+     = \frac{1}{N+1} \sum_{j=0}^{N} \frac{\sin (j+\nicefrac{1}{2})x}{\sin
+     \nicefrac{x}{2}}\\
+  &= \frac{1}{N+1} \sum_{j=0}^{N} \frac{\cos jx- \cos (j+1)x}{2\sin^{2}
+     \nicefrac{x}{2}}
+     = \frac{1}{N+1} \frac{1-\cos (N+1)x}{2\sin^{2} \nicefrac{x}{2}}\\
+  &= \frac{1}{N+1} \frac{1-\cos^{2} \frac{N+1}{2} x +\sin^{2}
+     \frac{N+1}{2}x}{2\sin^{2} \nicefrac{x}{2}}\\
+  &= \frac{1}{N+1} \frac{\sin^{2} \frac{N+1}{2} x}{\sin^{2} \nicefrac{x}{2}}
+     = \frac{1}{N+1}
+     \left(\frac{\sin\frac{N+1}{2}x}{\sin\nicefrac{x}{2}}\right)^{2}
+\end{align*}
+
+\begin{satz}
+  Die Fejerschen Summen der Fourierreihen lassen sich darstellen als
+  \begin{gather*}
+    \sigma_{N}f(x)= \frac{1}{2\pi} \int_{0}^{2\pi} K_{N}(x-y) f(y)\,dy=
+       \frac{1}{2\pi} \int_{0}^{2\pi} K_{N}(y) f(x-y)\,dy
+  \end{gather*}
+  mit dem Fejerkern
+  \begin{gather*}
+    K_{N}(x)= \frac{1}{N+1} \left(\frac{\sin \frac{N+1}{2}x}{\sin
+       \nicefrac{x}{2}}\right)^{2}
+  \end{gather*}
+\end{satz}
+
+Bevor wir nun herausarbeiten, dass der Fejerkern nützlicher als der
+Dirichletkern ist, wollen wir ein zweite Summationsmethode einführen.
+
+\paragraph{Poissonsummation}
+
+Diese entspricht der Abelschen Summationsmethode:
+\begin{gather*}
+  \pi_{r} f(x)= \sum_{j=-\infty}^{\infty} r^{\abs{j}} \hat{f}(x)e^{ijx}
+\end{gather*}
+
+Der Fourier-Multiplikator ist:
+\begin{gather*}
+  \lambda_{j}=r^{\abs{j}}
+\end{gather*}
+
+Der Poissonkern ist:
+\begin{align*}
+  P_{r}(e^{ix}) &= \sum_{j=-\infty}^{\infty} r^{\abs{j}} e^{ijx} =
+     \sum_{j=0}^{\infty} ((re^{ix})^{j}+ (re^{-ix})^{j})-1\\
+  &= \frac{1}{1-re^{ix}}+\frac{1}{1-re^{-ix}}-1
+     = \frac{2-r(e^{ix}-e^{-ix})}{\abs{1-re^{ix}}^{2}} -1\\
+  &= \frac{2-2r\cos x}{1-2r\cos x+r^{2}} -1
+     = \frac{1-r^{2}}{1-2r\cos x +r^{2}}
+\end{align*}
+
+\begin{satz}
+  Die Poissonschen Summen lassen sich darstellen als:
+  \begin{gather*}
+    \pi_{r}f(x)= \frac{1}{2\pi} \int_{0}^{2\pi} P_{r}(x-y) f(y)\,dy=
+       \frac{1}{2\pi} \int_{0}^{2\pi} P_{r(x) f(x-y)\,dy}
+  \end{gather*}
+  mit dem Poissonkern
+  \begin{gather*}
+    \pi_{r}(x)=\frac{1-r^{2}}{1-2r\cos x +r^{2}}
+  \end{gather*}
+\end{satz}
+
+Im Zusammenhang mit der Konvergenz von Fourierreihen betrachten wir
+asymptotische Eigenschaften solcher Kerne $K_{N}$ für $N\rightarrow\infty$.
+
+\begin{defini}
+  Eine Familie von Summationskernen $k_{N})$ heißt \highl{Standardfamilie},
+  falls gilt:
+  \begin{enumerate}
+    \item $\frac{1}{2\pi} \int_{0}^{2\pi} k_{N}(x)\,dx=1$
+   \item $\frac{1}{2\pi} \int_{0}^{2\pi} \abs{k_{N}(x)\,dx}\leq G$
+   \item $\forall\epsilon>0\colon \lim_{N\rightarrow\infty} k_{N}(x)=0$
+    gleichmäßig für $\epsilon\leq\abs{x}\leq\pi$.
+  \end{enumerate}
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+    \item Ist $k_{N}$ positiv, so impliziert die erste Eigenschaft in der
+    Definition auch die zweite mit $G=1$.
+   \item Die Familie der Dirichletkerne erfüllt die zweite Eigenschaft nicht
+  \end{enumerate}
+\end{bemerk}
+
+\begin{satz}
+  Die Familien der Fejerkerne $(K_{N})$ und der Poissonkerne $(P_{r})$ sind
+  Standardfamilien von Summationskernen.
+  \begin{proof}
+    Da beide positiv sind, genügt es, die Eigenschaft 1 und 3 zu zeigen.
+  \end{proof}
+\end{satz}
 
 %% Vorlesung vom 2007-05-02
 Sei $(k_{N})$ die Standardfamilie von Kernen $\Leftrightarrow$
