--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -75,11 +75,11 @@
 \newtheorem{bemerk}{Bemerkung}[chapter]
 \newtheorem{defini}{Definition}[chapter]
 \newtheorem{bsp}{Beispiel}[chapter]
-\newtheorem{festl}{Festlegung}[chapter]
+%\newtheorem{festl}{Festlegung}[chapter]
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
+%\newtheorem{fakt}{Fakt}
 
 \theoremheaderfont{\scshape}
 \theorembodyfont{\normalfont}
@@ -94,7 +94,7 @@
 \newcommand*{\bemerkautorefname}{Bemerkung}
 \newcommand*{\definiautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
-\newcommand*{\festlautorefname}{Festlegung}
+%\newcommand*{\festlautorefname}{Festlegung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
@@ -102,11 +102,11 @@
 
 \pagestyle{headings}
 
-\newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
+%\newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
-\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
-\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+%\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
+%\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 \newcommand*{\bb}{\mathfrak{b}}
 \newcommand*{\FM}{\mathfrak{M}}
 \newcommand*{\FF}{\mathfrak{F}}
@@ -143,25 +143,25 @@
 \newcommand*{\indexsection}{\minisec}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
+%\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
 % Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
 % im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
 % Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
+% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw\mspace{8mu}}%
+% 			       {$gdw$\xspace}}
+% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
+% 			       {$gdw_{def}$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+%\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
+%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
@@ -171,11 +171,11 @@
 % Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
 % nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
 % description mit normaler Schrift
-\newenvironment*{mdescription}%
-                {\renewcommand*{\descriptionlabel}[1]%
- 			       {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		{\end{description}}
+% \newenvironment*{mdescription}%
+%                 {\renewcommand*{\descriptionlabel}[1]%
+%  			       {\hspace\labelsep\normalfont ##1}%
+% 		 \begin{description}}%
+% 		{\end{description}}
 
 \makeindex
 
