--- a/zumbusch-lsglin/skript.latex
+++ b/zumbusch-lsglin/skript.latex
@@ -79,11 +79,11 @@
 \newtheorem{bemerk}{Bemerkung}[chapter]
 \newtheorem{defini}{Definition}[chapter]
 \newtheorem{bsp}{Beispiel}[chapter]
-\newtheorem{festl}{Festlegung}[chapter]
+%\newtheorem{festl}{Festlegung}[chapter]
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
+%\newtheorem{fakt}{Fakt}
 
 \theoremheaderfont{\scshape}
 \theorembodyfont{\normalfont}
@@ -98,7 +98,7 @@
 \newcommand*{\bemerkautorefname}{Bemerkung}
 \newcommand*{\definiautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
-\newcommand*{\festlautorefname}{Festlegung}
+%\newcommand*{\festlautorefname}{Festlegung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
@@ -134,39 +134,30 @@
 \newcommand*{\indexsection}{\minisec}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
+%\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
 % Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
 % im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
 % Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
+% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw\mspace{8mu}}%
+% 			       {$gdw$\xspace}}
+% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
+% 			       {$gdw_{def}$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+%\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
+%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
-
-% Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
-% nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
-% description mit normaler Schrift
-\newenvironment*{mdescription}%
-                {\renewcommand*{\descriptionlabel}[1]%
- 			       {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		{\end{description}}
 
 \makeindex
 
@@ -176,7 +167,7 @@
 \begin{document}
 
 \title{Schnelle Löser für große lineare Gleichungssysteme}
-\author{Prof. Dr. Gerhard Zumbusch}
+\author{Prof.\,Dr.\,Gerhard Zumbusch}
 \date{Semester: SS 2007}
 \maketitle
 
