- Keywords wieder rein
git-svn-id: https://svn.lug-jena.de/uni-skripte@870 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -179,8 +179,8 @@
 
 \makeindex
 
-\SVN $LastChangedRevision: 865 $
-\SVN $LastChangedDate$
+\SVN $LastChangedRevision$
+\SVN $LastChangedDate: 2007-05-02 20:15:48 +0200 (Mi, 02 Mai 2007) $
 
 \begin{document}
 
