- lokalkompakt erklärt und kleine Umformatierungen
git-svn-id: https://svn.lug-jena.de/uni-skripte@873 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -1020,6 +1020,8 @@ Die Fourierkoeffizienten sind $\hat{f}(j)=\langle f,e_{j}\rangle$.
   (separablem) Hilbertraum.
 \end{bemerk}
 
+%% Vorlesung vom 2007-05-04
+
 \begin{satz}
   Sei $f\in L_{2}(\T)$. Dann gilt
   \begin{gather*}
@@ -1057,12 +1059,16 @@ $x\xi=\sum_{i=1}^{n} x_{i}\xi_{i}$ und $\abs{x}=\sqrt{xx}=
 
 \section{Definition und grundlegende Eigenschaften}
 
-Es ist $(\R^{n},+)$ eine lokalkompakte abelsche Gruppe. \todo{lokalkompakt
-erklären}
+Es ist $(\R^{n},+)$ eine lokalkompakte abelsche Gruppe. Ein Hausdorff-Raum
+heißt lokalkompakt, wenn es zu jedem Punkt eine offene Umgebung gibt, deren
+Abschluss kompakt ist bzw. wenn jeder Punkt eine kompakte Umgebung besitzt.
+
 Wir wollen nun die Charaktere der Gruppe bestimmen. Charaktere sind stetige
 Homomorphismen $\phi\colon\R^{n}\rightarrow \C^{*}=\C\setminus \{0\}$, d.\,h.
-$\phi(x+y)=\phi(x)\phi(y)$. Wir setzen $\phi(0,\dotsc,0,x_{k},0,\dotsc,
-0)=\colon \phi_{k}(x)\Rightarrow \phi_{k}\colon\R\rightarrow \C^{*}$ stetig.
+$\phi(x+y)=\phi(x)\phi(y)$. Wir setzen:
+\[\phi(0,\dotsc,0,x_{k},0,\dotsc,
+0)=\colon \phi_{k}(x)\Rightarrow \phi_{k}\colon\R\rightarrow \C^{*} \text{
+stetig}\]
 Weiter können wir "`basteln"': $\phi(x_{1},\dotsc, x_{n})=
 \phi((x_{1},0,\dotsc)+ \dotsb+ (0,\dotsc,0,x_{n}))= \phi(x_{1},0,\dotsc,0)
 \phi(0,x_{2},0,\dotsc,0)\dotso \phi(0,\dotsc,0,x_{n})= \phi_{1}(x_{1})
