- kleinen Schreibfehler korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@878 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -259,7 +259,7 @@
   $L\times L\rightarrow L, (a,b)\mapsto [a,b]$, so dass gilt:
   \begin{enumerate}
    \item (\highl{Schiefsymmetrie}) $[a,a]=0\,\forall a\in L$
-   \item (\highl{Jacobi-Identität}) $[[a,b],c]+[[b,c],a]+ [[c,a]+b]= 0\,\forall
+   \item (\highl{Jacobi-Identität}) $[[a,b],c]+[[b,c],a]+ [[c,a], b]= 0\,\forall
     a,b,c\in L$
   \end{enumerate}
 \end{defini}
