- abs wieder auskommentiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@890 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -177,7 +177,7 @@
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-%\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
+\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
 %\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
