--- a/zumbusch-lsglin/skript.latex
+++ b/zumbusch-lsglin/skript.latex
@@ -111,7 +111,7 @@
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
-
+\newcommand*{\CK}{\mathcal{K}}
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
@@ -151,15 +151,15 @@
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-%\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
+\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
-\renewcommand*{\CK}{\mathcal{K}}
+
 \makeindex
 
 \SVN $LastChangedRevision$
@@ -493,10 +493,10 @@ Näherung des Gleichungssystems ist.
 
 \paragraph{Konvergenz des CG-Verfahrens}
 $\norm{e^{(k)}}_{A}\leq 2 \frac{c^{k}}{1+c^{2k}} \norm{e^{(0)}}_{A}$ mit
-$c=\frac{\sqrt{\CK(A)}-1}{\sqrt{\CK(A)}+1}.
+$c=\frac{\sqrt{\CK(A)}-1}{\sqrt{\CK(A)}+1}$.
 
 Vergleiche hierzu auch das Gradientenverfahren mit
-$($\frac{\CK(A)-1}{\CK(A)+1})^{k}$. Bei exakter Rechnung ist man nach $n$
+$(\frac{\CK(A)-1}{\CK(A)+1})^{k}$. Bei exakter Rechnung ist man nach $n$
 Schritten fertig.
 
 Start mit $r^{(0)}=Ax^{(0)}-b, p^{(0)}=r^{(0)}$\\
